--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
+    "cloudinary": "^2.9.0",
     "drizzle-orm": "^0.45.1",
     "leaflet": "^1.9.4",
     "uuid": "^13.0.0",
